--- a/app/src/main/res/layout/notification_collapsed_layout.xml
+++ b/app/src/main/res/layout/notification_collapsed_layout.xml
@@ -2,12 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootNotifSmall"
     android:layout_width="match_parent"
     android:layout_height="80dp"
+    android:layout_margin="8dp"
     android:minHeight="48dp"
-    android:id="@+id/rootNotifSmall"
+    android:background="@mipmap/ic_launcher_background"
     android:orientation="horizontal"
     android:weightSum="10">
+
+    <ImageView
+        android:id="@+id/notifSmallIV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="2"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -24,13 +35,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
-            android:fontFamily="serif"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif"
             android:maxLines="1"
             android:shadowColor="@color/black_50"
             android:shadowDx="-1"
             android:shadowDy="-1"
             android:shadowRadius="2"
-            android:textSize="16sp"
             android:textStyle="bold"
             android:typeface="normal"
             tools:text="NASA\u2019s CAPSTONE mission launches to the moon" />
@@ -43,29 +54,18 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:ellipsize="marquee"
+            android:textColor="@color/white"
             android:fadingEdge="horizontal"
-            android:fontFamily="serif"
+            android:fontFamily="sans-serif"
             android:marqueeRepeatLimit="marquee_forever"
             android:maxLines="2"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:textSize="12sp"
             android:typeface="normal"
             tools:text="NASA\u2019s CAPSTONE CAPSTONE CAPSTONE CAPSTONE CAPSTONE CAPSTONE mission launches to the moon" />
     </LinearLayout>
 
-
-    <ImageView
-        android:id="@+id/notifSmallIV"
-        android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="2"
-        android:src="@mipmap/ic_launcher_foreground"
-        android:background="@mipmap/ic_launcher_background"
-      />
 
 </LinearLayout>
