--- a/app/src/main/res/layout/widget_item_layout.xml
+++ b/app/src/main/res/layout/widget_item_layout.xml
@@ -20,7 +20,6 @@
         android:background="@drawable/bottom_shadow"
         android:backgroundTint="@color/black">
 
-
         <TextView
             android:id="@+id/stackItemTitle"
             android:layout_width="wrap_content"
@@ -29,7 +28,7 @@
             android:background="@color/transparent"
             android:contentDescription="@string/appwidget_text"
             android:maxLines="3"
-            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
             android:paddingBottom="8dp"
             android:textColor="@color/white"
             android:textSize="14sp"
