--- a/app/src/main/res/layout/new_app_widget.xml
+++ b/app/src/main/res/layout/new_app_widget.xml
@@ -10,8 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:background="@mipmap/ic_launcher_background"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:background="@mipmap/ic_launcher_background">
 
         <!--        <TextView-->
         <!--            android:id="@+id/fact"-->
@@ -35,16 +35,16 @@
         <ImageView
             android:layout_width="34dp"
             android:layout_height="34dp"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher_foreground" />
-
+            android:src="@mipmap/ic_launcher_foreground"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="Today's Headlines"
+            android:paddingTop="2dp"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            />
     </LinearLayout>
 
     <FrameLayout
@@ -64,7 +64,7 @@
             android:layout_height="match_parent"
             android:background="@android:color/darker_gray"
             android:gravity="center"
-            android:text="You don't have any news..."
+            android:text="Empty"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
