--- a/app/src/main/res/xml/new_app_widget_info.xml
+++ b/app/src/main/res/xml/new_app_widget_info.xml
@@ -4,11 +4,13 @@
     android:initialKeyguardLayout="@layout/new_app_widget"
     android:initialLayout="@layout/new_app_widget"
     android:minWidth="250dp"
-    android:minHeight="180dp"
+    android:minHeight="200dp"
+    android:minResizeHeight="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/new_app_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
-    android:targetCellHeight="3"
-    android:updatePeriodMillis="86400000"
+    android:targetCellHeight="4"
+    android:autoAdvanceViewId="@id/widgetStackView"
+    android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
