--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -5,7 +5,7 @@
 
     <shortcut
         android:enabled="true"
-        android:icon="@drawable/ic_explore"
+        android:icon="@drawable/compass"
         android:shortcutDisabledMessage="@string/androidx_startup"
         android:shortcutId="explore"
         android:shortcutLongLabel="@string/discover_long_label"
