widget preview image added

--- a/app/src/main/res/xml/new_app_widget_info.xml
+++ b/app/src/main/res/xml/new_app_widget_info.xml
@@ -6,11 +6,11 @@
     android:minWidth="250dp"
     android:minHeight="200dp"
     android:minResizeHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/preview"
     android:previewLayout="@layout/new_app_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
     android:targetCellHeight="4"
     android:autoAdvanceViewId="@id/widgetStackView"
-    android:updatePeriodMillis="3600000"
+    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
