--- a/app/src/main/res/layout/widget_item_layout.xml
+++ b/app/src/main/res/layout/widget_item_layout.xml
@@ -29,7 +29,8 @@
             android:background="@color/transparent"
             android:contentDescription="@string/appwidget_text"
             android:maxLines="3"
-            android:paddingStart="8dp"
+            android:ellipsize="end"
+            android:paddingHorizontal="8dp"
             android:paddingBottom="8dp"
             android:textColor="@color/white"
             android:textSize="14sp"
